# openGL-window

./: CMakeLists.txt  README.md  main.c
glfw-3.3.2/: CMakeLists.txt
